--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,2 +1,6 @@
 # Changes from airac-16-02 to airac-16-03
 1. Added EG R220
+2. Military runway designator updates (includes EGOV/QL/QS/VN)
+3. Removed geo lines from JACKO/GURLU to the start of the EGLC point merge arc
+4. Added correct sector ownership for ENSV and EKDK thus also fixing some line display
+5. Removed remaining references to Manston (EGMH) in agreements and in adjacent airport setup
