--- a/CHANGELOG
+++ b/CHANGELOG
@@ -4,4 +4,4 @@
 3. Removed geo lines from JACKO/GURLU to the start of the EGLC point merge arc
 4. Added correct sector ownership for ENSV and EKDK thus also fixing some line display
 5. Removed remaining references to Manston (EGMH) in agreements and in adjacent airport setup
-6. Added EG R219
+6. Added EG R219 - thanks to @swhite (Sam White)
