Fixes #304 - Setup EGPD sector rings for GND/TWR/APP to show Area. Removed RMA sector lines when APP is online.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -7,3 +7,4 @@
 6. Added EG R219 - thanks to @swhite (Sam White)
 7. Added EGGP and EGPH GND/TWR/APP sector rings to display to Area - thanks to @lpeters (Luke Peters)
 8. Added EGCC GND/TWR/APP sector rings to display to Area
+15. Added EGPD GND/TWR/APP sector rings to display to Area
