Updated CHANGELOG to include amendments made in 2c865a48

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -13,3 +13,4 @@
 12. Fixed Lossiemouth/Kinloss MATZ airspace to fit ARTCC low naming conventions
 13. Added EGPF GND/TWR/APP sector rings to display to Area - thanks to @lpeters (Luke Peters)
 14. Added Southern CTA bases and moved Clacton CTA base - thanks to @lpeters (Luke Peters)
+15. Added missing fixes on Gatwick STARs (TIMBA1J/1K/3F/2G) - thanks to @lpeters (Luke Peters)
