Updated CHANGELOG to reflect LTC SW static sector addition.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -16,3 +16,4 @@
 15. Added missing fixes on Gatwick STARs (TIMBA1J/1K/3F/2G) - thanks to @lpeters (Luke Peters)
 16. Added EGPD GND/TWR/APP sector rings to display to Area - thanks to @lpeters (Luke Peters)
 17. Added LTC SE sector static boundary - thanks to @samw (Sam White)
+18. Added LTC SW sector static boundary - thanks to @samw (Sam White)
