Corrected RMA whitespace to use spaces instead of tabs.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -17,3 +17,4 @@
 16. Added EGPD GND/TWR/APP sector rings to display to Area - thanks to @lpeters (Luke Peters)
 17. Added LTC SE sector static boundary - thanks to @samw (Sam White)
 18. Added LTC SW sector static boundary - thanks to @samw (Sam White)
+19. Reformatted RMA whitespace
