--- a/CHANGELOG
+++ b/CHANGELOG
@@ -20,3 +20,4 @@
 19. Reformatted RMA whitespace
 20. Added missing Y3 airspace base (to the east of the EGGD CTA)
 21. Added EGPD COPX agreements - thanks to @lpeters (Luke Peters)
+23. Removed Stand 50 (EGCC) - thanks to @acrix (Matthew Moy)
