--- a/CHANGELOG
+++ b/CHANGELOG
@@ -11,16 +11,15 @@
 10. Corrected Stornoway (EGPO) top-down priority
 11. Added FL245 shelf/portion of the EGPX/EISN FIR
 12. Fixed Lossiemouth/Kinloss MATZ airspace to fit ARTCC low naming conventions
-<<<<<<< HEAD
 13. Added EGPF GND/TWR/APP sector rings to display to Area - thanks to @lpeters (Luke Peters)
 14. Added Southern CTA bases and moved Clacton CTA base - thanks to @lpeters (Luke Peters)
 15. Added missing fixes on Gatwick STARs (TIMBA1J/1K/3F/2G) - thanks to @lpeters (Luke Peters)
 16. Added EGPD GND/TWR/APP sector rings to display to Area - thanks to @lpeters (Luke Peters)
 17. Added LTC SE sector static boundary - thanks to @samw (Sam White)
 18. Added LTC SW sector static boundary - thanks to @samw (Sam White)
-19. Reformatted RMA whitespace
-20. Added missing Y3 airspace base (to the east of the EGGD CTA)
-21. Added EGPD COPX agreements - thanks to @lpeters (Luke Peters)
-=======
-13. Added Essex Radar to Stansted Director automatic handoff - thanks to @samw (Sam White)
->>>>>>> issue-272-essexownership
+19. Added AC Daventry sector static boundary
+20. Added LTC NE and NW sector static boundaries
+21. Reformatted RMA whitespace
+22. Added missing Y3 airspace base (to the east of the EGGD CTA)
+23. Added EGPD COPX agreements - thanks to @lpeters (Luke Peters)
+24. Added Essex Radar to Stansted Director automatic handoff - thanks to @samw (Sam White)
