Fixes #291 - new London AC Dover sector static boundary line

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -26,3 +26,4 @@
 25. Removed Manchester stand 50 - thanks to @acrix (Matthew Moy)
 26. AIRAC - Removed Manchester holding point W2 - thanks to @acrix (Matthew Moy)
 27. Adjusted CC INT/FIN sectors and inbound agreements with MAN - thanks to @hsugden (Harry Sugden)
+28. Added AC Dover sector static boundary - thanks to @hsugden (Harry Sugden)
