Fixes #288 - new London AC Clacton sector static boundary line

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -27,3 +27,4 @@
 26. AIRAC - Removed Manchester holding point W2 - thanks to @acrix (Matthew Moy)
 27. Adjusted CC INT/FIN sectors and inbound agreements with MAN - thanks to @hsugden (Harry Sugden)
 28. Added AC Dover sector static boundary - thanks to @hsugden (Harry Sugden)
+29. Added AC Clacton sector static boundary - thanks to @hsugden (Harry Sugden)
