--- a/CHANGELOG
+++ b/CHANGELOG
@@ -30,3 +30,4 @@
 29. Added AC Clacton sector static boundary - thanks to @hsugden (Harry Sugden)
 30. Added AC Worthing sector static boundary - thanks to @hsugden (Harry Sugden)
 31. Updated French CTRs, added the Lille CTR, and updated the Deauville and Lille TMAs - thanks to @pierr3 (Pierre Ferran)
+32. AIRAC - CAE NDB withdrawn; fix FERAS withdrawn; EG D323A danger area updated - thanks to @hsugden (Harry Sugden)
