--- a/CHANGELOG
+++ b/CHANGELOG
@@ -12,6 +12,7 @@
 11. AIRAC (1606) - L15/UL15/N859 routing changes - thanks to @lpeters (Luke Peters)
 12. AIRAC (1606) - Various Gatwick (EGKK) RNAV SID routing updates - thanks to @agent_squash (Alex Ashley)
 13. AIRAC (1606) - Birmingham (EGBB) SID additions and removals - thanks to @acrix (Matthew Moy)
+14. AIRAC (1606) - Newcastle (EGNT) GIRLI RWY 25 SID updated - thanks to @tasosp (Tasos Petropoulos) and @hsugden (Harry Sugden)
 
 # Changes from airac-16-02 to airac-16-03
 1. Added EG R220 - thanks to @acriX (Matthew Moy)
