--- a/CHANGELOG
+++ b/CHANGELOG
@@ -16,6 +16,7 @@
 15. AIRAC (1606) - Airway Y3 removed and P2 routing updated - thanks to @agent_squash (Alex Ashley)
 16. AIRAC (1606) - Conventional airways Q295 and UQ295 replaced by RNAV Q295 - thanks to @hsugden (Harry Sugden)
 17. AIRAC (1606) - Significant point (Fixes) additions - thanks to @acrix (Matthew Moy)
+18. AIRAC (1605) - Aberdeen (EGPD) holding point D1A added - thanks to @tasosp (Tasos Petropoulos)
 
 # Changes from airac-16-02 to airac-16-03
 1. Added EG R220 - thanks to @acriX (Matthew Moy)
