Updated for changelog for changes in fd3024fe and 0aaf85c6 - #356

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -17,6 +17,7 @@
 16. AIRAC (1606) - Conventional airways Q295 and UQ295 replaced by RNAV Q295 - thanks to @hsugden (Harry Sugden)
 17. AIRAC (1606) - Significant point (Fixes) additions - thanks to @acrix (Matthew Moy)
 18. AIRAC (1605) - Aberdeen (EGPD) holding point D1A added - thanks to @tasosp (Tasos Petropoulos)
+19. AIRAC (1606) - Various conventional airways replaced by RNAV equivalents - thanks to @hsugden (Harry Sugden)
 
 # Changes from airac-16-02 to airac-16-03
 1. Added EG R220 - thanks to @acriX (Matthew Moy)
