Changelog updated for 366532d f0aa6b5 fb81eb8

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -18,6 +18,9 @@
 17. AIRAC (1606) - Significant point (Fixes) additions - thanks to @acrix (Matthew Moy)
 18. AIRAC (1605) - Aberdeen (EGPD) holding point D1A added - thanks to @tasosp (Tasos Petropoulos)
 19. AIRAC (1606) - Various conventional airways replaced by RNAV equivalents - thanks to @hsugden (Harry Sugden)
+20. Added London City (EGLC) Stand 15 to SMR - thanks to @tasosp (Tasos Petropoulos)
+21. AIRAC (1503) - Norwich (EGSH) ground updates - thanks to @tasosp (Tasos Petropoulos)
+22. Added AC North sector static boundary - thanks to @acrix (Matthew Moy)
 
 # Changes from airac-16-02 to airac-16-03
 1. Added EG R220 - thanks to @acriX (Matthew Moy)
