--- a/CHANGELOG
+++ b/CHANGELOG
@@ -22,6 +22,7 @@
 21. AIRAC (1503) - Norwich (EGSH) ground updates - thanks to @tasosp (Tasos Petropoulos)
 22. Added AC North sector static boundary - thanks to @acrix (Matthew Moy)
 23. AIRAC (1604) - Cambridge (EGSC) RWY 05 coordinates and extended centrelines updated - thanks to @hsugden (Harry Sugden)
+24. AIRAC (1603) - Luton (EGGW) RWY coordinates and extended centrelines updated - thanks to @hsugden (Harry Sugden)
 
 # Changes from airac-16-02 to airac-16-03
 1. Added EG R220 - thanks to @acriX (Matthew Moy)
