Fixes #299 - added Scottish TMA sector static boundary

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -23,6 +23,7 @@
 22. Added AC North sector static boundary - thanks to @acrix (Matthew Moy)
 23. AIRAC (1604) - Cambridge (EGSC) RWY 05 coordinates and extended centrelines updated - thanks to @hsugden (Harry Sugden)
 24. AIRAC (1603) - Luton (EGGW) RWY coordinates and extended centrelines updated - thanks to @hsugden (Harry Sugden)
+25. Added Scottish TMA sector static boundary - thanks to @hsugden (Harry Sugden)
 
 # Changes from airac-16-02 to airac-16-03
 1. Added EG R220 - thanks to @acriX (Matthew Moy)
