--- a/CHANGELOG
+++ b/CHANGELOG
@@ -4,6 +4,7 @@
 3. Fixed ordering of Birmingham (EGBB) RWY 33 DTY SIDs - thanks to @hsugden (Harry Sugden)
 4. Fixed longitudinal indicator in Gatwick (EGKK) KKE10 coordinate - thanks to @hsugden (Harry Sugden)
 5. Added EGNX GND/TWR sector rings to display to Area - thanks to @hsugden (Harry Sugden)
+6. Added EGBB GND/TWR sector rings to display to Area - thanks to @hsugden (Harry Sugden)
 
 # Changes from airac-16-03 to airac-16-06
 1. Fixed Antrim callsign suffix, fixing ownership/position identification - thanks to @hsugden (Harry Sugden)
