--- a/CHANGELOG
+++ b/CHANGELOG
@@ -13,6 +13,7 @@
 12. AIRAC (1607) - Benbecula (BEN) VOR/DME now DME only - thanks to @hsugden (Harry Sugden)
 13. AIRAC (1607) - Barrow/Walney Island (EGNL) RNAV approaches and associated airfield fixes - thanks to @agent_squash (Alex Ashley)
 14. AIRAC (1607) - Campbeltown (EGEC) and Wick (EGPC) RNAV approaches and associated airfield fixes - thanks to @hsugden (Harry Sugden)
+15. AIRAC (1607) - Carlisle (EGNC) runway track and coordinate updates - thanks to @hsugden (Harry Sugden)
 
 # Changes from airac-16-03 to airac-16-06
 1. Fixed Antrim callsign suffix, fixing ownership/position identification - thanks to @hsugden (Harry Sugden)
