--- a/CHANGELOG
+++ b/CHANGELOG
@@ -14,6 +14,7 @@
 13. Sector Line, Ownership and Agreement changes relating to TC East and TC South airspace changes - thanks to @hsugden (Harry Sugden)
 14. Added EGPK, EGAE, EGPE and EGNC GND/TWR/APP sector rings to display to Area - thanks to @hsugden (Harry Sugden)
 15. AIRAC (1609) - Shoreham (EGKA) runway track and coordinate updates - thanks to @hsugden (Harry Sugden)
+16. AIRAC (1609) - N552 and N562 now RNAV routes, and N552 route updated - thanks to @hsugden (Harry Sugden)
 
 # Changes from airac-16-06 to airac-16-07
 1. Adjusted default visibility centre and 'scaling' - thanks to @jpfox (Jamie Fox)
