--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,7 +3,8 @@
 2. Moved Heathrow (EGLL) specific RNAV fixes to correct file - thanks to @agent_squash (Alex Ashley)
 3. AIRAC (1610) - Aldergrove (EGAA) ground position reinstated - thanks to @agent_squash (Alex Ashley)
 4. Removed danger area EG D121 - thanks to @agent_squash (Alex Ashley)
-5. AIRAC (1612) - Lands End (EGHC) RNAV fix BAVMA redesignated BAVKI - thanks to @agent_squash (Alex Ashley) 
+5. AIRAC (1612) - Lands End (EGHC) RNAV fix BAVMA redesignated BAVKI - thanks to @agent_squash (Alex Ashley)
+6. AIRAC (1610) - Amended agreements between SS FIN and TC NW for truncated Stansted (EGSS) SIDs - thanks to @hsugden (Harry Sugden)
 
 # Changes from airac-16-07 to airac-16-09
 1. Fixed AC North static boundary, adding previously missed lines - thanks to @hsugden (Harry Sugden)
