--- a/CHANGELOG
+++ b/CHANGELOG
@@ -12,6 +12,7 @@
 11. AIRAC (1610) - Significant point (FIXES) updates, and removal of INS VOR - thanks to @agent_squash (Alex Ashley)
 12. AIRAC (1610) - Various airway redesignations and updates - thanks to @agent_squash (Alex Ashley)
 13. AIRAC (1610) - Added new Strumble CTA to ARTCC High - thanks to @hsugden (Harry Sugden)
+14. AIRAC (1612) - Runway track updates at Cardiff (EGFF), Edinburgh (EGPH) and Aberdeen (EGPD) - thanks to @hsugden (Harry Sugden)
 
 # Changes from airac-16-07 to airac-16-09
 1. Fixed AC North static boundary, adding previously missed lines - thanks to @hsugden (Harry Sugden)
