--- a/CHANGELOG
+++ b/CHANGELOG
@@ -12,6 +12,7 @@
 11. AIRAC (1613) - Doncaster (EGCN) FNY1D STAR redesignated FNY2D, beginning at EMBOR - thanks to @lpeters (Luke Peters) and @hsugden (Harry Sugden)
 12. Updated Brize Norton (EGVN) threshold co-ordinates - thanks to @trevorhannant
 13. Updated Guernsey (EGJB) SKERY SID designators - thanks to @trevorhannant
+14. AIRAC (1701) - removal of 5 danger areas - thanks to @hsugden (Harry Sugden)
 
 # Changes from airac-16-09 to airac-16-12
 1. AIRAC (1610) - Stansted (EGSS) and Luton (EGGW) SIDs and STARs updated - thanks to @luke-brown (Luke Brown)
