East Midlands (EGNX) runway track updated - fixes #462

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -13,6 +13,7 @@
 12. Updated Brize Norton (EGVN) threshold co-ordinates - thanks to @trevorhannant
 13. Updated Guernsey (EGJB) SKERY SID designators - thanks to @trevorhannant
 14. AIRAC (1701) - removal of 5 danger areas - thanks to @hsugden (Harry Sugden)
+15. AIRAC (1611) - East Midlands (EGNX) runway track updated - thanks to @hsugden (Harry Sugden)
 
 # Changes from airac-16-09 to airac-16-12
 1. AIRAC (1610) - Stansted (EGSS) and Luton (EGGW) SIDs and STARs updated - thanks to @luke-brown (Luke Brown)
