--- a/CHANGELOG
+++ b/CHANGELOG
@@ -15,6 +15,7 @@
 14. AIRAC (1701) - removal of 5 danger areas - thanks to @hsugden (Harry Sugden)
 15. AIRAC (1611) - East Midlands (EGNX) runway track updated - thanks to @hsugden (Harry Sugden)
 16. AIRAC (1610) - Various airway redesignations and updates, incl. Shoreham (EGKA) runway redesignation - thanks to @hsugden (Harry Sugden)
+17. Amended N864 airspace base between BHD and 5NM before EXMOR to FL65 - thanks to @hsugden (Harry Sugden)
 
 # Changes from airac-16-09 to airac-16-12
 1. AIRAC (1610) - Stansted (EGSS) and Luton (EGGW) SIDs and STARs updated - thanks to @luke-brown (Luke Brown)
